// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`UploadedRecordingsHome matches a snapshot when rendering published profiles 1`] = `
<main
  class="uploadedRecordingsHome"
>
  <header>
    <h1
      class="appHeader"
    >
      <span
        class="appHeaderSlogan"
      >
        <a
          class="appHeaderLink"
          href="/"
        >
          ⁨Firefox Profiler⁩
        </a>
         — 
        <span
          class="appHeaderSubtext"
        >
          Web app for ⁨Firefox⁩ performance analysis
        </span>
      </span>
      <a
        class="appHeaderGithubIcon"
        href="https://github.com/firefox-devtools/profiler"
        rel="noopener noreferrer"
        target="_blank"
        title="Go to our Git repository (this opens in a new window)"
      >
        <svg
          aria-label="github"
          class="octicon octicon-mark-github"
          height="22"
          version="1.1"
          viewBox="0 0 16 16"
          width="22"
        >
          <path
            d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0 0 16 8c0-4.42-3.58-8-8-8z"
            fill-rule="evenodd"
          />
        </svg>
      </a>
    </h1>
  </header>
  <h2
    class="photon-title-30"
  >
    Uploaded Recordings
  </h2>
  <ul
    class="publishedProfilesList"
  >
    <li
      class="publishedProfilesListItem"
    >
      <a
        class="publishedProfilesLink"
        href="/public/MACOSX/marker-chart/"
        title="Click here to load profile ⁨MacOS X profile⁩"
      >
        <div
          class="publishedProfilesDate"
        >
          Jul 5, 2020
        </div>
        <div
          class="publishedProfilesInfo"
        >
          <div
            class="publishedProfilesName"
          >
            <strong>
              MacOS X profile
            </strong>
             (
            38.0s
            )
          </div>
          <div
            class="profileMetaInfoSummary"
          >
            <div
              class="profileMetaInfoSummaryProductAndVersion"
              data-product="Firefox"
            >
              Firefox 62
            </div>
            <div
              class="profileMetaInfoSummaryPlatform"
              data-toolkit="macOS 10.12"
            >
              macOS 10.12
            </div>
          </div>
        </div>
      </a>
      <div
        class="publishedProfilesActionButtons"
      >
        <button
          class="publishedProfilesDeleteButton photon-button photon-button-default"
          disabled=""
          title="This profile cannot be deleted because we lack the authorization information."
          type="button"
        >
          Delete
        </button>
      </div>
    </li>
    <li
      class="publishedProfilesListItem"
    >
      <a
        class="publishedProfilesLink"
        href="/"
        title="Click here to load profile ⁨#012345⁩"
      >
        <div
          class="publishedProfilesDate"
        >
          2:00 PM
        </div>
        <div
          class="publishedProfilesInfo"
        >
          <div
            class="publishedProfilesName"
          >
            <strong>
              Profile #012345
            </strong>
             (
            2.0s
            )
          </div>
          <div
            class="profileMetaInfoSummary"
          >
            <div
              class="profileMetaInfoSummaryProductAndVersion"
              data-product="Fennec"
            >
              Fennec
            </div>
            <div
              class="profileMetaInfoSummaryPlatform"
              data-toolkit=""
            />
          </div>
        </div>
      </a>
      <div
        class="publishedProfilesActionButtons"
      >
        <div
          class="buttonWithPanel"
        >
          <button
            aria-expanded="false"
            class="buttonWithPanelButton publishedProfilesDeleteButton photon-button photon-button-default"
            title="Click here to delete the profile ⁨#012345⁩"
            type="button"
          >
            Delete
          </button>
        </div>
      </div>
    </li>
    <li
      class="publishedProfilesListItem"
    >
      <a
        class="publishedProfilesLink"
        href="/public/WINDOWS/marker-chart/"
        title="Click here to load profile ⁨Another good profile⁩"
      >
        <div
          class="publishedProfilesDate"
        >
          1:00 PM
        </div>
        <div
          class="publishedProfilesInfo"
        >
          <div
            class="publishedProfilesName"
          >
            <strong>
              Another good profile
            </strong>
             (
            38.0s
            )
          </div>
          <div
            class="profileMetaInfoSummary"
          >
            <div
              class="profileMetaInfoSummaryProductAndVersion"
              data-product="Firefox"
            >
              Firefox 77
            </div>
            <div
              class="profileMetaInfoSummaryPlatform"
              data-toolkit="Windows 10"
            >
              Windows 10
            </div>
          </div>
        </div>
      </a>
      <div
        class="publishedProfilesActionButtons"
      >
        <button
          class="publishedProfilesDeleteButton photon-button photon-button-default"
          disabled=""
          title="This profile cannot be deleted because we lack the authorization information."
          type="button"
        >
          Delete
        </button>
      </div>
    </li>
    <li
      class="publishedProfilesListItem"
    >
      <a
        class="publishedProfilesLink"
        href="/"
        title="Click here to load profile ⁨Layout profile⁩"
      >
        <div
          class="publishedProfilesDate"
        >
          Jul 3, 8:00 AM
        </div>
        <div
          class="publishedProfilesInfo"
        >
          <div
            class="publishedProfilesName"
          >
            <strong>
              Layout profile
            </strong>
             (
            0.0s
            )
          </div>
          <div
            class="profileMetaInfoSummary"
          >
            <div
              class="profileMetaInfoSummaryProductAndVersion"
              data-product="Firefox"
            >
              Firefox 68
            </div>
            <div
              class="profileMetaInfoSummaryPlatform"
              data-toolkit="Linux"
            >
              Linux
            </div>
          </div>
        </div>
      </a>
      <div
        class="publishedProfilesActionButtons"
      >
        <button
          class="publishedProfilesDeleteButton photon-button photon-button-default"
          disabled=""
          title="This profile cannot be deleted because we lack the authorization information."
          type="button"
        >
          Delete
        </button>
      </div>
    </li>
    <li
      class="publishedProfilesListItem"
    >
      <a
        class="publishedProfilesLink"
        href="/public/123abc456/calltree/?globalTrackOrder=0-1-2-3-4-5-6-7-8-9-10&hiddenGlobalTracks=1-2-3-4-5-6-7-8-9&localTrackOrderByPid=32027-1-2-0~12629-0~12149-0~11755-0~11945-0~12533-0~11798-0~11862-0~12083-0~12118-0~12298-0-1~&search=bla&thread=11&v=5"
        title="Click here to load profile ⁨#123abc⁩"
      >
        <div
          class="publishedProfilesDate"
        >
          May 20, 2018
        </div>
        <div
          class="publishedProfilesInfo"
        >
          <div
            class="publishedProfilesName"
          >
            <strong>
              Profile #123abc
            </strong>
             (
            0.0s
            )
          </div>
          <div
            class="profileMetaInfoSummary"
          >
            <div
              class="profileMetaInfoSummaryProductAndVersion"
              data-product="Firefox Preview"
            >
              Firefox Preview 80
            </div>
            <div
              class="profileMetaInfoSummaryPlatform"
              data-toolkit="Android 7"
            >
              Android 7
            </div>
          </div>
        </div>
      </a>
      <div
        class="publishedProfilesActionButtons"
      >
        <button
          class="publishedProfilesDeleteButton photon-button photon-button-default"
          disabled=""
          title="This profile cannot be deleted because we lack the authorization information."
          type="button"
        >
          Delete
        </button>
      </div>
    </li>
  </ul>
</main>
`;

exports[`UploadedRecordingsHome matches a snapshot when there is no published profiles 1`] = `
<main
  class="uploadedRecordingsHome"
>
  <header>
    <h1
      class="appHeader"
    >
      <span
        class="appHeaderSlogan"
      >
        <a
          class="appHeaderLink"
          href="/"
        >
          ⁨Firefox Profiler⁩
        </a>
         — 
        <span
          class="appHeaderSubtext"
        >
          Web app for ⁨Firefox⁩ performance analysis
        </span>
      </span>
      <a
        class="appHeaderGithubIcon"
        href="https://github.com/firefox-devtools/profiler"
        rel="noopener noreferrer"
        target="_blank"
        title="Go to our Git repository (this opens in a new window)"
      >
        <svg
          aria-label="github"
          class="octicon octicon-mark-github"
          height="22"
          version="1.1"
          viewBox="0 0 16 16"
          width="22"
        >
          <path
            d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0 0 16 8c0-4.42-3.58-8-8-8z"
            fill-rule="evenodd"
          />
        </svg>
      </a>
    </h1>
  </header>
  <h2
    class="photon-title-30"
  >
    Uploaded Recordings
  </h2>
  <p
    class="photon-body-30"
  >
    No profile has been uploaded yet!
  </p>
</main>
`;
